2008-08-21  Hans Petter Jansson  <hpj@novell.com>

	* configure.ac: Late post-release version bump to 0.99.6.

2008-08-21  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendgphoto2.c (do_unmount):
	Handle plural forms correctly. Fixes bug #548841.

=== gvfs 0.99.5 ===

2008-08-16  Jesse van den Kieboom  <jesse@icecrew.nl>

	* daemon/gvfsbackenddav.c:
	Fixed using display_name property getting overwritten

2008-08-16  Christian Neumair  <cneumair@gnome.org>

	* daemon/gvfsbackendtrash.c (add_extra_trash_info):
	Correctly set copy name to original file name. Fixes #41852.

2008-08-07  Jesse van den Kieboom  <jesse@icecrew.nl>

	* client/gdaemonfileoutputstream.c:
	Fixed crash in gio because error was not properly
	being set in the query_info noop

2008-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* daemon/gvfsbackendsftp.c:
	Added restoring file permissions when replacing a file.

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonfile.c:
	Remove wrong dbus reply struct checks for replace_async,
	create_async and append_async that would live to (false)
	invalid reply errors.

2008-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* client/gdaemonfile.c:
	Set etag to "" when supplied to g_daemon_file_replace_async
	with NULL. Bug #546300

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* configure.ac: Post-release bump to 0.99.5.

=== gvfs 0.99.4 ===

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* NEWS: Update for release

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* configure.ac:
	Require glib 2.17.6 (cause by GEmblemedIcon changes)

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* monitor/hal/ghaldrive.c: 
	Various ref counting fixes.

	* monitor/hal/ghalvolume.c:
	Report error in idle to avoid calling a callback with the
	volume lock held.
	Use volume lock in hhal_volume_get_activation_root. Various
	ref counting fixes.

	Bug #545489. Based on a patch from Matthias Clasen.
